--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -158,8 +158,8 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
 
-      width: 6
-      height: 6
+      width: 3
+      height: 3
       resolution: 0.05
 
       always_send_full_costmap: True
@@ -167,26 +167,21 @@ local_costmap:
 
       footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
 
-      plugins: ["voxel_layer", "inflation_layer"]
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.05
-        z_voxels: 16
-        max_obstacle_height: 2.0
-        mark_threshold: 0
+      plugins: ["static_layer", "voxel_layer", "inflation_layer"]
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: True # QoS setting; durability policy transient local, combined with any depth, provides functionality similar to that of latching publishers
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
         observation_sources: scan
         scan:
           topic: /scan_filtered
-          max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 2.0
+          raytrace_max_range: 2.5
           raytrace_min_range: 0.0
-          obstacle_max_range: 1.5
+          obstacle_max_range: 2.0
           obstacle_min_range: 0.0
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
