--- a/config/nav2_params_pure_pursuit.yaml
+++ b/config/nav2_params_pure_pursuit.yaml
@@ -10,6 +10,7 @@ bt_navigator:
     # groot_zmq_publisher_port: 1666
     # groot_zmq_server_port: 1667
 
+    default_nav_to_pose_bt_xml: /navigate_w_recovery.xml
     plugin_lib_names:
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_follow_path_action_bt_node
@@ -43,26 +44,28 @@ bt_navigator_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: False
+
     controller_frequency: 10.0
+
+    # if velocity is below threshold value it is set to 0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
-    progress_checker_plugin: "progress_checker"
-    goal_checker_plugin: "goal_checker"
-    controller_plugins: ["FollowPath"]
 
-    # Progress checker parameters
+    progress_checker_plugin: "progress_checker"
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
       movement_time_allowance: 10.0
-    # Goal checker parameters
+
+    goal_checker_plugin: "goal_checker"
     goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.1
       yaw_goal_tolerance: 0.25
-      stateful: True
+      stateful: True # if stateful is true goal checker will not check if the xy position matches again once it is found to be true.
 
+    controller_plugins: ["FollowPath"]
     FollowPath:
       plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
       desired_linear_vel: 0.7
@@ -96,44 +99,44 @@ controller_server_rclcpp_node:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 2.0
+      use_sim_time: False
+
       global_frame: odom
       robot_base_frame: base_link
-      use_sim_time: False
-      rolling_window: true
-      width: 6
-      height: 6
+
+      update_frequency: 5.0
+      publish_frequency: 2.0
+
+      width: 3
+      height: 3
       resolution: 0.05
+
+      always_send_full_costmap: True
+      rolling_window: True
+
       footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
-      plugins: ["voxel_layer", "inflation_layer"]
+
+      plugins: ["static_layer", "voxel_layer", "inflation_layer"]
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: True # QoS setting; durability policy transient local, combined with any depth, provides functionality similar to that of latching publishers
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
+        observation_sources: scan
+        scan:
+          topic: /scan_filtered
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+          raytrace_max_range: 2.5
+          raytrace_min_range: 0.0
+          obstacle_max_range: 2.0
+          obstacle_min_range: 0.0
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.05
-        z_voxels: 16
-        max_obstacle_height: 2.0
-        mark_threshold: 0
-        observation_sources: scan
-        scan:
-          topic: /scan_filtered
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-          raytrace_max_range: 2.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 1.5
-          obstacle_min_range: 0.0
-      static_layer:
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
+
   local_costmap_client:
     ros__parameters:
       use_sim_time: False
@@ -144,15 +147,24 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
-      publish_frequency: 1.0
+      use_sim_time: False
+
       global_frame: map
       robot_base_frame: base_link
-      use_sim_time: False
-      footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
+
+      update_frequency: 1.0
+      publish_frequency: 1.0
+
       resolution: 0.05
-      track_unknown_space: true
+
+      always_send_full_costmap: True
+      track_unknown_space: True # if false, treats unknown space as free space, else as unknown space
+
+      footprint: "[[0.165, 0.145], [0.165, -0.145], [-0.165, -0.145], [-0.165, 0.145]]"
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: True
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -171,7 +183,7 @@ global_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
-      always_send_full_costmap: True
+
   global_costmap_client:
     ros__parameters:
       use_sim_time: False
@@ -182,68 +194,42 @@ global_costmap:
 planner_server:
   ros__parameters:
     use_sim_time: False
-    planner_plugins: ["GridBased"]
 
+    planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_smac_planner/SmacPlanner2D"
-      tolerance: 0.125 # tolerance for planning if unable to reach exact pose, in meters, for 2D node
-      downsample_costmap: false # whether or not to downsample the map
+      tolerance: 0.125 # tolerance for planning if unable to reach exact pose, in meters
+      downsample_costmap: False # whether or not to downsample the map
       downsampling_factor: 1 # multiplier for the resolution of the costmap layer (e.g. 2 on a 5cm costmap would be 10cm)
       allow_unknown: true # allow traveling in unknown space
-      max_iterations: -1 # maximum total iterations to search for before failing
-      max_on_approach_iterations: 1000 # maximum number of iterations to attempt to reach goal once in tolerance, 2D only
-      max_planning_time: 2.0 # max time in s for planner to plan, smooth, and upsample. Will scale maximum smoothing and upsampling times based on remaining time after planning.
-      smooth_path: true # Whether to smooth searched path
+      max_iterations: 1000000 # maximum total iterations to search for before failing (in case unreachable), set to -1 to disable
+      max_on_approach_iterations: 1000 # maximum number of iterations to attempt to reach goal once in tolerance
+      max_planning_time: 2.0 # max time in s for planner to plan, smooth
       motion_model_for_search: "MOORE" # 2D Moore, Von Neumann
-      angle_quantization_bins: 72 # For SE2 node: Number of angle bins for search, must be 1 for 2D node (no angle search)
-      minimum_turning_radius: 0.20 # For SE2 node & smoother: minimum turning radius in m of path / vehicle
-      reverse_penalty: 2.1 # For Reeds-Shepp model: penalty to apply if motion is reversing, must be => 1
-      change_penalty: 0.20 # For SE2 node: penalty to apply if motion is changing directions, must be >= 0
-      non_straight_penalty: 1.05 # For SE2 node: penalty to apply if motion is non-straight, must be => 1
-      cost_penalty: 1.3 # For SE2 node: penalty to apply to higher cost zones
-
+      cost_travel_multiplier: 2.0 # Cost multiplier to apply to search to steer away from high cost areas. Larger values will place in the center of aisles more exactly (if non-`FREE` cost potential field exists) but take slightly longer to compute. To optimize for speed, a value of 1.0 is reasonable. A reasonable tradeoff value is 2.0. A value of 0.0 effective disables steering away from obstacles and acts like a naive binary search A*.
+      use_final_approach_orientation: False # Whether to set the final path pose at the goal's orientation to the requested orientation (false) or in line with the approach angle so the robot doesn't rotate to heading (true)
       smoother:
-        smoother:
-          w_curve: 30.0 # weight to minimize curvature of path
-          w_dist: 0.0 # weight to bind path to original as optional replacement for cost weight
-          w_smooth: 30000.0 # weight to maximize smoothness of path
-          w_cost: 0.025 # weight to steer robot away from collision and cost
-          cost_scaling_factor: 10.0 # this should match the inflation layer's parameter
-
-        # I do not recommend users mess with this unless they're doing production tuning
-        optimizer:
-          max_time: 0.10 # maximum compute time for smoother
-          max_iterations: 500 # max iterations of smoother
-          debug_optimizer: false # print debug info
-          gradient_tol: 1.0e-10
-          fn_tol: 1.0e-20
-          param_tol: 1.0e-15
-          advanced:
-            min_line_search_step_size: 1.0e-20
-            max_num_line_search_step_size_iterations: 50
-            line_search_sufficient_function_decrease: 1.0e-20
-            max_num_line_search_direction_restarts: 10
-            max_line_search_step_expansion: 50
-
-    # GridBased:
-    #   plugin: "nav2_navfn_planner/NavfnPlanner"
-    #   tolerance: 0.2
-    #   use_astar: false
-    #   allow_unknown: true
+        max_iterations: 1000
+        w_smooth: 0.3
+        w_data: 0.2
+        tolerance: 1e-10
 
 planner_server_rclcpp_node:
   ros__parameters:
     use_sim_time: False
 
-robot_state_publisher:
+recoveries_server:
   ros__parameters:
     use_sim_time: False
 
-recoveries_server:
-  ros__parameters:
+    global_frame: odom
+    robot_base_frame: base_link
+    transform_tolerance: 0.1
+
     costmap_topic: local_costmap/costmap_raw
     footprint_topic: local_costmap/published_footprint
     cycle_frequency: 10.0
+
     recovery_plugins: ["spin", "backup", "wait"]
     spin:
       plugin: "nav2_recoveries/Spin"
@@ -251,11 +237,11 @@ recoveries_server:
       plugin: "nav2_recoveries/BackUp"
     wait:
       plugin: "nav2_recoveries/Wait"
-    global_frame: odom
-    robot_base_frame: base_link
-    transform_timeout: 0.1
-    use_sim_time: False
+
+    # spin & backup
     simulate_ahead_time: 2.0
+
+    # spin
     max_rotational_vel: 1.0
     min_rotational_vel: 0.4
     rotational_acc_lim: 3.2
