--- a/demo/compose.rosbot.mapping.yaml
+++ b/demo/compose.rosbot.mapping.yaml
@@ -1,20 +1,7 @@
 # Quick Star
-# $ docker compose -f compose.rosbot.yaml up
+# $ docker compose -f compose.rosbot.mapping.yaml up
 
 services:
-  rosbot-xl:
-    image: husarion/rosbot-xl:galactic
-    # build:
-    #   context: ./../
-    #   dockerfile: ./Dockerfile.hardware
-    restart: unless-stopped
-    command: ros2 launch rosbot_xl_bringup bringup.launch.py
-
-  microros:
-    image: microros/micro-ros-agent:galactic
-    restart: unless-stopped
-    command: udp4 --port 8888
-
   # modified behaviour tree that doesn't replane global path
   # nav2:
   #   image: husarion/navigation2:galactic
@@ -27,7 +14,7 @@ services:
   #       params_file:=/nav2_params.yaml
 
   # pure pursuit nav2
-  nav2:
+  navigation:
     image: husarion/navigation2:galactic
     restart: unless-stopped
     volumes:
@@ -36,19 +23,12 @@ services:
       ros2 launch nav2_bringup navigation_launch.py    
         params_file:=/nav2_params.yaml
 
-  slam-toolbox:
+  localization-mapping:
     image: husarion/slam-toolbox:galactic
     restart: unless-stopped
     volumes:
       - ../config/slam_toolbox_params.yaml:/slam_params.yaml
-      # - ./maps:/maps
+      - ./maps:/maps
     command: >
       ros2 launch slam_toolbox online_sync_launch.py 
         slam_params_file:=/slam_params.yaml
-
-  rplidar:
-    image: husarion/rplidar:galactic
-    restart: unless-stopped
-    devices:
-      - /dev/ttyUSB0
-    command: ros2 launch rplidar_ros2 rplidar_s1_launch.py inverted:=true
