--- a/config/amcl_params.yaml
+++ b/config/amcl_params.yaml
@@ -2,20 +2,19 @@ amcl:
   ros__parameters:
     use_sim_time: False
 
-    global_frame_id: "map"
-    odom_frame_id: "odom"
-    base_frame_id: "base_link"
+    global_frame_id: map
+    odom_frame_id: odom
+    base_frame_id: base_link
 
-    scan_topic: "scan"
+    scan_topic: scan_filtered
 
-    robot_model_type: "differential"
+    robot_model_type: differential
 
     set_initial_pose: True
     always_reset_initial_pose: True
     initial_pose:
       x: 0.0
-      y: 3.0
-      z: 0.0
+      y: 0.0
       yaw: 0.0
 
     tf_broadcast: True
@@ -27,6 +26,9 @@ amcl:
     alpha4: 0.2
     alpha5: 0.2
 
+    # Beam skipping - ignores beams for which a majoirty of particles do not agree with the map
+    # prevents correct particles from getting down weighted because of unexpected obstacles
+    # such as humans
     do_beamskip: False
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
@@ -34,7 +36,7 @@ amcl:
 
     lambda_short: 0.1
 
-    laser_model_type: "likelihood_field"
+    laser_model_type: likelihood_field
     laser_likelihood_max_dist: 2.0
     laser_max_range: 12.0
     laser_min_range: -1.0
