--- a/config/nav2_params_pure_pursuit.yaml
+++ b/config/nav2_params_pure_pursuit.yaml
@@ -68,20 +68,20 @@ controller_server:
     controller_plugins: ["FollowPath"]
     FollowPath:
       plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
-      desired_linear_vel: 0.7
+      desired_linear_vel: 0.5
       lookahead_dist: 0.6
-      min_lookahead_dist: 0.3
+      min_lookahead_dist: 0.4
       max_lookahead_dist: 0.9
       lookahead_time: 1.5
-      rotate_to_heading_angular_vel: 1.0
+      rotate_to_heading_angular_vel: 1.5
       transform_tolerance: 0.5
       use_velocity_scaled_lookahead_dist: true
-      min_approach_linear_velocity: 0.05
-      approach_velocity_scaling_dist: 0.2
+      min_approach_linear_velocity: 0.1
+      approach_velocity_scaling_dist: 0.5
       max_allowed_time_to_collision_up_to_carrot: 1.0
 
-      use_regulated_linear_velocity_scaling: false
-      use_cost_regulated_linear_velocity_scaling: false
+      use_regulated_linear_velocity_scaling: true # Whether to use the regulated features for path curvature (e.g. slow on high curvature paths).
+      use_cost_regulated_linear_velocity_scaling: false # Whether to use the regulated features for proximity to obstacles (e.g. slow in close proximity to obstacles).
 
       regulated_linear_scaling_min_radius: 0.9
       regulated_linear_scaling_min_speed: 0.25
@@ -107,8 +107,8 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
 
-      width: 3
-      height: 3
+      width: 4
+      height: 4
       resolution: 0.05
 
       always_send_full_costmap: True
