--- a/config/nav2_params_pure_pursuit.yaml
+++ b/config/nav2_params_pure_pursuit.yaml
@@ -4,6 +4,10 @@ bt_navigator:
     global_frame: map
     robot_base_frame: base_link
 
+    # Default timeout value (in milliseconds) while a BT action node is waiting for acknowledgement from an action server. This value will be overwritten for a BT node if the input port "server_timeout" is provided.
+    # default value: 20
+    default_server_timeout: 20
+
     # groot monitoring will no longer be supported in humble https://github.com/ros-planning/navigation2/pull/2696
     # it sometimes crashes
     enable_groot_monitoring: False
