--- a/src/rosbot_xl_ekf/config/ekf.yaml
+++ b/src/rosbot_xl_ekf/config/ekf.yaml
@@ -13,7 +13,7 @@ ekf_filter_node:
         base_link_frame: base_link
         world_frame: odom
 
-        odom0: /odom
+        odom0: /rosbot_xl_base_controller/odom
         odom0_config: [false, false, false, # X , Y , Z
                       false, false, false, # roll , pitch ,yaw
                       true, false, false, # dX , dY , dZ
