--- a/src/rosbot_xl_bringup/package.xml
+++ b/src/rosbot_xl_bringup/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="ed@todo.todo">ed</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
