--- a/src/rosbot_xl_description/package.xml
+++ b/src/rosbot_xl_description/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.1</version>
   <description>The rosbot_xl_description package</description>
   <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
-  <license>MIT</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>controller_manager</build_depend>
