--- a/src/rosbot_xl_hardware/config/diff_drive_controller.yaml
+++ b/src/rosbot_xl_hardware/config/diff_drive_controller.yaml
@@ -21,6 +21,15 @@ hardware_node:
     # maybe will be resolved (https://github.com/ros-controls/ros2_controllers/issues/411), then it can be removed
     wheel_radius: 0.048
 
+    # order of velocity commands to be published in motors_cmd Float32MultiArray msg
+    velocity_command_joint_order:
+      [
+        "rear_right_wheel_joint",
+        "rear_left_wheel_joint",
+        "front_right_wheel_joint",
+        "front_left_wheel_joint",
+      ]
+
 rosbot_xl_base_controller:
   ros__parameters:
     left_wheel_names: ["front_left_wheel_joint", "rear_left_wheel_joint"]
